--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@prisma/adapter-mariadb": "^7.4.0",
     "@prisma/client": "^7.4.0",
     "@prisma/nuxt": "^0.3.0",
     "@types/node": "^25.2.3",
+    "dotenv": "^17.3.0",
     "nuxt": "^4.3.1",
     "prisma": "^7.4.0",
     "vue": "^3.5.28",
     "vue-router": "^4.6.4"
+  },
+  "devDependencies": {
+    "ts-node": "^10.9.2",
+    "tsx": "^4.21.0"
   }
 }
