--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@prisma/nuxt": "^0.3.0",
     "@types/node": "^25.2.3",
     "dotenv": "^17.3.0",
+    "normalize.css": "^8.0.1",
     "nuxt": "^4.3.1",
     "prisma": "^7.4.0",
     "vue": "^3.5.28",
